# micro-templates

./: LICENSE  README.md
confluent-kafka-fastapi/: README.md
confluent-kafka-fastapi-docker/: docker-compose.yml
confluent-kafka-fastapi-docker/consumer/: main.py
confluent-kafka-fastapi-docker/consumer_producer/: main.py
confluent-kafka-fastapi-docker/producer/: Dockerfile  main.py  requirements.txt
confluent-kafka-fastapi/consumer/: Dockerfile
confluent-kafka-fastapi/consumer-producer/: main.py
confluent-kafka-fastapi/producer/: main.py
confluent-kafka-fastapi[deprecated]/: README.md  docker-compose.yml
confluent-kafka-fastapi[deprecated]/consumer/: main.py
confluent-kafka-fastapi[deprecated]/consumer-producer/: main.py
confluent-kafka-rust/: README.md  docker-compose.yml
confluent-kafka-rust/mc-consumer/: docker-compose.yml  main.py  requirements.txt  run-mc-consumer.sh
confluent-kafka-rust/mc-hybrid-consumer-producer/: Cargo.toml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  run-mc-hybrid-consumer-producer.sh
confluent-kafka-rust/mc-hybrid-consumer-producer/src/: lib.rs
confluent-kafka-rust/mc-producer/: Dockerfile  docker-compose.yml  main.py  run-mc-producer.sh
rabbit-mq/: README.md  docker-compose.yml
rabbit-mq/consumer-producer/: Dockerfile  docker-compose.yml  main.py
rabbit-mq/producer/: docker-compose.yml  main.py
redis-streams/: README.md
redis-streams/consumer/: Dockerfile  docker-compose.yml  main.py
redis-streams/consumer-producer/: Dockerfile  docker-compose.yml  main.py
redis-streams/producer/: main.py  (+1 more)
