[package]
name = "mc-hybrid-consumer-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mc_hybrid_consumer_producer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"]}
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization
serde_json = "1.0" # JSON handling
rand = { version = "0.8", features = ["small_rng"] } # Random number generation
rayon = "1.10" # Parallelism for Monte Carlo